@@ -1,6 +1,6 @@
 
 R : Copyright 2005, The R Foundation for Statistical Computing
-Version 2.3.0 Under development (unstable) (2005-10-12 r35861)
+Version 2.3.0 Under development (unstable) (2005-11-23 r36429)
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -200,8 +200,9 @@ NaNs produced in: gamma(x)
 +           pi^(2*(1:3)) * c(1/6, 1/15, 8/63), tol=32*Meps)
 [1] TRUE
 > x <- c(-100,-3:2, -99.9, -7.7, seq(-3,3, length=61), 5.1, 77)
-> stopifnot(identical( digamma(x), psigamma(x,0)),
-+           identical(trigamma(x), psigamma(x,1)))# TRUE (+ NaN warnings)
+> ## Intel icc showed a < 1ulp difference in the second.
+> stopifnot(all.equal( digamma(x), psigamma(x,0), 2*Meps),
++           all.equal(trigamma(x), psigamma(x,1), 2*Meps))# TRUE (+ NaN warnings)
 Warning messages:
 1: NaNs produced in: digamma(x) 
 2: NaNs produced in: psigamma(x, deriv) 
@@ -303,5 +304,5 @@ Warning messages:
 > 
 > ## Last Line:
 > cat('Time elapsed: ', proc.time() - .proctime00,'\n')
-Time elapsed:  1.74 0.03 1.77 0 0 
+Time elapsed:  1.05 0 1.06 NA NA 
 > 
